commit de todos los cambios.